<resources>
    <string name="app_name">Tunisia League</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="rememberMe">Remember Me</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="register">Don\'t have an account? Register now.</string>
    <string name="goToLogin">I have an account! Go to login.</string>

    <string name="mustNotBeEmpty">Must not be empty !</string>
    <string name="checkYourEmail">Must be a valid email !</string>
    <string name="checkYourPwd">Must be a at least 6 characters !</string>
    <string name="checkName">Must be a at least 3 characters !</string>
    <string name="userNotFound">User not Found ! Please check your inputs.</string>
    <string name="userExist">User Exist ! Please use un another Email.</string>
    <string name="logoutTitle">Logout</string>
    <string name="logoutMessage">Are you sure you want to logout ?</string>

    <string name="insertFav">Add Team</string>
    <string name="deleteFav">Delete Team</string>
    <string name="favAddMessage">Add this to your favourites?</string>
    <string name="favDelMessage">Delete this from your favourites?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="submit">Submit</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Matches</string>
    <string name="title_logout">Logout</string>
    <string name="title_notification">Notification</string>
    <string name="title_settings">Settings</string>
    <string name="title_profile">Profile</string>
    <string name="title_rank">Ranking</string>
    <string name="edit">Edit</string>
    <string name="title_activity_team">Team</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <string name="victory">VICTORY : %d</string>
    <string name="draw">DRAW : %d</string>
    <string name="defeat">DEFEAT : %d</string>
    <string name="totalPoints">TOTAL POINTS : %d</string>
    <string name="coming_soon">Coming soon !</string>
    <string name="this_is_for_notifications">This is for Notifications !</string>

</resources>