<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:enabled="true"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_ranking"
        android:icon="@drawable/ic_baseline_military_tech_24"
        android:enabled="true"
        android:title="@string/title_rank" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_baseline_account_circle_24"
        android:enabled="true"
        android:title="@string/title_profile" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:enabled="true"
        android:title="@string/title_settings" />

</menu>